Refactor Plaid sync to use versioned events